--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -24,21 +22,118 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/all.css" />
-    <title>Yoyo's Challenge</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+  <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/all.css" />
+  <title>Yoyo's Challenge</title>
+</head>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+<body>
+  <div class="resume">
+    <div class="left">
+      <img
+        src="https://www.grammy.com/sites/com/files/styles/image_landscape_hero/public/muzooka/Ariana%2BGrande/Ariana%2520Grande_16_9_1578384679.jpg?itok=vYR_9Sts"
+        alt="Ariana Grande" class="photo">
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+      <div class="leftTitle">
+        <span>Contact</span>
+        <div class="row">
+          <div>email</div>
+          <div>a1m2y30@hotmail.com.tw</div>
+        </div>
+        <div class="row">
+          <div>Phonenum</div>
+          <div>0912345678</div>
+        </div>
+        <div class="row">
+          <div>Location</div>
+          <div>Taiwan Taipei</div>
+        </div>
+        <div class="row">
+          <div>Linkedin</div>
+          <div>Ariana Grande</div>
+        </div>
+      </div>
+      <div class="leftTitle">
+        <span>Skills</span>
+        <div>
+          <div>Project Management</div>
+          <div>Bar</div>
+        </div>
+        <div>
+          <div>Web Development</div>
+          <div>Bar2</div>
+        </div>
+        <div>
+          <div>Process Design</div>
+          <div>Bar3</div>
+        </div>
+        <div>
+          <div>Communication</div>
+          <div>Bar4</div>
+        </div>
+      </div>
+      <div class="leftTitle">
+        <span>Language</span>
+        <div>
+          <div>English</div>
+          <div>circle</div>
+        </div>
+        <div>
+          <div>Chinese</div>
+          <div>circle</div>
+        </div>
+
+      </div>
+    </div>
+    <div class="right">
+      <div class="blank"></div>
+      <div class="header">Ariana Grande
+        <span>American singer, songwriter, and actress</span>
+      </div>
+      <div class="title">
+        <div class="subtitle">Professional Profile</div>
+        <hr>
+        <div class="description"> Born in Boca Raton, Florida, Grande began her career in the 2008 Broadway musical 13. 
+          She rose to prominence for her role as Cat Valentine in the Nickelodeon television series Victorious (2010–2013) and Sam & Cat (2013–2014). 
+          She subsequently signed with Republic Records in 2011 after the label's executives discovered YouTube videos of her covering songs. Her 1950s doo-wop-influenced pop and R&B debut album, Yours Truly (2013), topped the US Billboard 200 chart, while its lead single, 
+          "The Way", charted in the top ten of the US Billboard Hot 100.</div>
+      </div>
+      <div class="title">
+        <div class="subtitle">Experience</div>
+        <hr>
+        <div class="description">
+          <div>2008–2012: Breakthrough on Nickelodeon
+            <ul>
+              <li>Be cast in the Nickelodeon television show Victorious along with 13 co-star Elizabeth Gillies in 2009</li>
+              <li>Received the Breakthrough Artist of the Year award from the Music Business Association, recognizing her achievements throughout 2013.</li>
+              <li>Released first single, "Put Your Hearts Up", in December 2011, which was recorded for a potential teen-oriented pop album that was never issued.</li>
+            </ul>
+          </div>
+          <div>2013–2017: Yours Truly and My Everything</div>
+          <ul>
+            <li>Be the musical performer on Saturday Night Live, with Chris Pratt as the host on September 27, 2014.</li>
+            <li>Released Dangerous Woman on May 20, 2016 and debuted at number two on the Billboard 200.</li>
+            <li>Began recording songs for her third studio album, Dangerous Woman, originally titled Moonlight, in 2015.</li>
+          </ul>
+          <div>2018–present: Sweetener and Thank U, Next</div>
+          <ul>
+            <li>Became the first solo artist to occupy the top three spots on the Billboard Hot 100 with "7 Rings" at number one</li>
+            <li>Received multiple nominations at the 2020 iHeartRadio Music Awards</li>
+            <li>Grande placed 17th on Forbes' 2020 Celebrity 100 as one of the highest-paid celebrities in 2019.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="title">
+        <div class="subtitle">Education</div>
+        <hr>
+        <div class="description">
+          <ul>
+            <li>Pine Crest School</li>
+            <li>North Broward Preparatory School</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
